out.txt
Programs/p_1_2_1.cpp: In function ‘int main()’:
Programs/p_1_2_1.cpp:6:2: error: ‘retun’ was not declared in this scope
  retun;
  ^
